Changed to static

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
+
 <!doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="index.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+        <link href='https://cdn.tailwindcss.com' rel='stylesheet'>
     </head>
-<body class="bg-gray-100 h-screen grid">
-    <main class="grid place-content-center place-items-center flex-col">
-        <img class="rounded-lg shadow-lg max-w-sm mb-8 w-full mx-auto" src="https://d33wubrfki0l68.cloudfront.net/4f388050208e6b01d61f2d6a24cedbf57c965567/dfb31/assets/images/me.jpg" alt="Jethro May">
-        <h1 class="text-2xl text-center mb-3">A new personal website about my life outside of web development is coming soon.</h1>
-        <h2 class="text-2xl text-center">If you're looking for my web development website, you can find it here: <a class="underline" href="https://jethromay.dev">jethromay.dev</a></h2>
-    </main>
-</body>
+    <body class="bg-gray-100 h-screen grid">
+        <main class="grid place-content-center place-items-center flex-col">
+            <img class="rounded-lg shadow-lg max-w-sm mb-8 w-full mx-auto" src="https://d33wubrfki0l68.cloudfront.net/4f388050208e6b01d61f2d6a24cedbf57c965567/dfb31/assets/images/me.jpg" alt="Jethro May">
+            <h1 class="text-2xl text-center mb-3">A new personal website about my life outside of web development is coming soon.</h1>
+            <h2 class="text-2xl text-center">If you're looking for my web development website, you can find it here: <a class="underline" href="https://jethromay.dev">jethromay.dev</a></h2>
+        </main>
+    </body>
 </html>
